--- a/views/layouts/adminLayout.ejs
+++ b/views/layouts/adminLayout.ejs
@@ -233,7 +233,7 @@
   <!-- <script src="/javascripts/dashboard.js"></script> -->
   <script defer src="/js/admin/banners/banner.js"></script>
   
-  
+  <script src="/js/admin/category/editcategory.js"></script>
  
 </body>
 
