--- a/views/admin/categories/addCategory.ejs
+++ b/views/admin/categories/addCategory.ejs
@@ -30,7 +30,74 @@
   </form>
  
 </div>
-<script defer src="/js/admin/category/addcategory"></script>
+<script defer>
+  const editform = document.getElementById("add-category");
+editform.addEventListener("submit", function (event) {
+    event.preventDefault()
+
+    Swal.fire({
+        title: "Are you sure?",
+        text: "You want to add new Category?",
+        icon: "warning",
+        showCancelButton: true,
+        confirmButtonColor: "#0061bc",
+        cancelButtonColor: "rgb(128, 128, 128)",
+        confirmButtonText: "Yes",
+    }).then(async (result) => {
+        if (result.isConfirmed) {
+            try {
+                // const categoryIdInput = document.getElementById("category-id"); 
+                // const categoryId = categoryIdInput.value.trim(); 
+
+                const formData = new FormData(editform);
+                  console.log(formData)
+                  
+                const categoryInput = document.getElementById("edit-category")
+                const category = categoryInput.value
+                console.log(categoryInput);
+
+                
+                const categorystatusSelect = document.getElementById("category-status")
+                const categorystatus = categorystatusSelect.value.trim()
+
+                const id = document.getElementById("category-id")
+                const body = JSON.stringify({ category, status: categorystatus })
+                if (category === "") {
+                    error.innerHTML = "category field can't be empty"
+                    return;
+                }
+
+
+                let res = await fetch(
+                    `/admin/category/add-category/${id}`,
+                    {
+                        method: "POST",
+                        body: body, id,
+                        headers: {
+                            'Content-Type': 'application/json',
+                        },
+                    }
+                );
+                let data = await res.json();
+                if (data.success) {
+                    Swal.fire(
+                        "Created!",
+                        "New category has been created successfully.",
+                        "success"
+                    ).then(() =>
+                        location.assign("/admin/category")
+                    );
+                } else {
+                    throw new Error(data.error);
+                }
+            } catch (e) {
+                console.log(e)
+                Swal.fire("Error!", e.message, "error");
+            }
+        }
+    });
+})
+</script>
 <style>
   .error {
     color: rgb(255, 0, 0);
