--- a/views/admin/categories/categories.ejs
+++ b/views/admin/categories/categories.ejs
@@ -61,7 +61,7 @@
                   <i class="bi bi-pencil"></i>
                   <!-- Edit -->
                 </a>
-                <button type="button" onclick="deleteCategory('<%= category._id %>',)" class="btn btn-sm btn-danger">
+                <button type="button" onclick="deleteCategory('<%= category._id %>')"  class="btn btn-sm btn-danger">
                   <i class="bi bi-trash"></i>
                   <!-- Delete -->
                 </button>
@@ -74,3 +74,36 @@
     </table>
   </div>
 </div>
+<script defer>
+  const deleteCategory = (id) => {
+Swal.fire({
+    title: 'Are you sure?',
+    text: "You won't be able to revert this!",
+    icon: 'warning',
+    showCancelButton: true,
+    confirmButtonColor: '#3085d6',
+    cancelButtonColor: '#d33',
+    confirmButtonText: 'Yes, delete it!'
+}).then(async (result) => {
+    if (result.isConfirmed) {
+        try {
+            await fetch(`/admin/category/delete-category?id=${id}`)
+                .then(responses => responses.json())
+                .then(data => {
+                    if (data.success) {
+                        Swal.fire(
+                            'Deleted!',
+                            'Your file has been deleted.',
+                            'success'
+                        ).then(() => {
+                            location.assign('/admin/category');
+                        })
+                    }
+                })
+        } catch (err) {
+            console.log(err)
+        }
+    }
+})
+}
+</script>
