--- a/views/admin/products/addProduct.ejs
+++ b/views/admin/products/addProduct.ejs
@@ -31,18 +31,18 @@
           <div class="text-dark"> <!-- Add text-dark class here -->
             <h4 class="card-title">Add New Product</h4>
           </div>
-          <form class="forms-sample" action="/admin/addproduct" method="post" enctype="multipart/form-data" onsubmit="return validateForm()" novalidate>
+          <form class="addProductForm" action="/admin/addProduct" method="post" enctype="multipart/form-data" onsubmit="return validateForm()" novalidate>
 
             <div class="form-group row">
               <div class="col-6">
-                <label for="product_name" class="text-dark">Product Title</label> <!-- Add text-dark class here -->
-                <input type="text" class="form-control text-dark text-justify" name="product_name" id="exampleInputName1"
+                <label for="productName" class="text-dark">Product Title</label> <!-- Add text-dark class here -->
+                <input type="text" class="form-control text-dark text-justify" name="productName" id="exampleInputName1"
                   placeholder="Name" >
                   <span id="productNameError" class="text-danger"></span>
               </div>
               <div class="col-6">
-                <label for="product_price" class="text-dark">Actual Price</label> <!-- Add text-dark class here -->
-                <input type="number" class="form-control text-dark" id="inlineFormInputName1" name="product_price"
+                <label for="actualprice" class="text-dark">Actual Price</label> <!-- Add text-dark class here -->
+                <input type="number" class="form-control text-dark" id="inlineFormInputName1" name="actualprice"
                   placeholder="Price">
                 <div id="priceError" class="text-danger"></div>
               </div>
@@ -68,8 +68,8 @@
               <div class="col-md-6">
                 <div class="form-group row">
                   <div class="col-sm-12">
-                    <label for="product_price" class="text-dark">Discount Price</label> <!-- Add text-dark class here -->
-                <input type="number" class="form-control text-dark" id="inlineFormInputName1" name="product_price"
+                    <label for="sellingPrice" class="text-dark">Discount Price</label> <!-- Add text-dark class here -->
+                <input type="number" class="form-control text-dark" id="inlineFormInputName1" name="sellingPrice"
                   placeholder="Price">
                     <div id="genderError" class="text-danger"></div>
                   </div>
@@ -80,8 +80,8 @@
               <div class="col-md-6">
                 <div class="form-group row">
                   <div class="col-sm-12">
-                    <label for="brand" class="text-dark">Brand</label> <!-- Add text-dark class here -->
-                    <input type="text" class="form-control text-dark" id="brand" name="brand"
+                    <label for="brandName" class="text-dark">Brand</label> <!-- Add text-dark class here -->
+                    <input type="text" class="form-control text-dark" id="brand" name="brandName"
                       placeholder="Brand Name" onkeyup="capitalizeFirstLetter(this)" >
                       <span id="brandError" class="text-danger"></span>
                   </div>
@@ -104,52 +104,19 @@
                 ></textarea>
                 <span id="descriptionError" class="text-danger"></span>
             </div>
-              <div class="row d-flex justify-content-between mt-3">
-                <div class="col-lg-3 col-md-6 rounded-image-preview">
-                  <label for="imageInput1" class="image-label">Image 1
-                    <div class="rounded-image-preview">
-                      <!-- <img id="imagePreview1" src="https://www.creativefabrica.com/wp-content/uploads/2021/04/05/Image-Upload-Icon-Graphics-10388650-1-580x386.jpg" alt="Preview" /> -->
-                    </div>
-                    <input name="image1" type="file" accept="image/*" id="imageInput1" class="imageInput" onchange="openImageCropper(1)">
-                    <button type="button" class="btn btn-sm btn-secondary mt-2" onclick="openModal('imagePreview1')">Crop</button>
-                  </label>
-                  <span id="imageError1" class="text-danger"></span>
-                </div>
+            <span class="fw-bold m-2">Select the Primary Image</span>
+
+            <div class="d-flex align-items-center justify-content-center">
+              <img id="prev" class="img-fluid img-thumbnail border my-1 rounded" width="100rem" height="100rem" src="" alt="" />
+            </div>
     
-                <div class="col-lg-3 col-md-6 rounded-image-preview">
-                  <label for="imageInput2" class="image-label">Image 2
-                    <div class="rounded-image-preview">
-                      <!-- <img id="imagePreview2" src="https://www.creativefabrica.com/wp-content/uploads/2021/04/05/Image-Upload-Icon-Graphics-10388650-1-580x386.jpg" alt="Preview" /> -->
-                    </div>
-                    <input name="image2" type="file" accept="image/*" id="imageInput2" class="imageInput" onchange="openImageCropper(2)">
-                    <button type="button" class="btn btn-sm btn-secondary mt-2" onclick="openModal('imagePreview2')">Crop</button>
-                  </label>
-                  <span id="imageError2" class="text-danger"></span>
-                </div>
-    
-                <div class="col-lg-3 col-md-6 rounded-image-preview">
-                  <label for="imageInput3" class="image-label">Image 3
-                    <div class="rounded-image-preview">
-                      <!-- <img id="imagePreview3" src="https://www.creativefabrica.com/wp-content/uploads/2021/04/05/Image-Upload-Icon-Graphics-10388650-1-580x386.jpg" alt="Preview" /> -->
-                    </div>
-                    <input name="image3" type="file" accept="image/*" id="imageInput3" class="imageInput" onchange="openImageCropper(3)">
-                    <button type="button" class="btn btn-sm btn-secondary mt-2" onclick="openModal('imagePreview3')">Crop</button>
-                  </label>
-                  <span id="imageError3" class="text-danger"></span>
-                </div>
-    
-                <div class="col-lg-3 col-md-6 rounded-image-preview">
-                  <label for="imageInput4" class="image-label">Image 4
-                    <div class="rounded-image-preview">
-                      <!-- <img id="imagePreview4" src="https://www.creativefabrica.com/wp-content/uploads/2021/04/05/Image-Upload-Icon-Graphics-10388650-1-580x386.jpg" alt="Preview" /> -->
-                    </div>
-                    <input name="image4" type="file" accept="image/*" id="imageInput4" class="imageInput" onchange="openImageCropper(4)">
-                    <button type="button" class="btn btn-sm btn-secondary mt-2" onclick="openModal('imagePreview4')">Crop</button>
-                  </label>
-                  <span id="imageError4" class="text-danger"></span>
-                </div>
-              </div>  
-            </div>  
+            <input id="primaryIMG" type="file" accept=".jpg,.jpeg,.png,.webp,.svg" class="form-control FilUploader" class="mb-3" required />
+            <input id="result" type="hidden" name="" value="" />
+            <span class="fw-bold">Select secondary images <br />
+              <span class="fw-normal text-success">Maximum 3 images</span></span>
+            <input type="file" id="image" class="form-control FilUploader" accept=".jpg,.jpeg,.png,.webp,.svg" name="images" class="mb-3" multiple required />
+          </fieldset>
+        </div>
             <button type="submit" class="btn btn-lg btn-success mr-2 mt-5">Add product</button>
           </form>
         </div>
@@ -157,7 +124,7 @@
     </div>
   </div>
 <!-- Modal for Cropping -->
-<div class="modal fade" id="cropModal" tabindex="-1" role="dialog" aria-labelledby="cropModalLabel" aria-hidden="true" style="">
+<!-- <div class="modal fade" id="cropModal" tabindex="-1" role="dialog" aria-labelledby="cropModalLabel" aria-hidden="true" style="">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -175,176 +142,6 @@
       </div>
     </div>
   </div>
-</div>
-  <script>
+</div> -->
+  <script defer>/js/admin/products/add-product.js</script>
 
-function capitalizeFirstLetter(input) {
-    input.value = input.value.charAt(0).toUpperCase() + input.value.slice(1);
-  }
-
-$(document).ready(function() {
-  $(".imageInput").change(function() {
-    var input = this;
-    var imagePreview = $(input).siblings('.rounded-image-preview').children('img')[0];
-
-    if (input.files && input.files[0]) {
-      var reader = new FileReader();
-
-      reader.onload = function(e) {
-        imagePreview.src = e.target.result;
-        $(imagePreview).show();
-      };
-
-      reader.readAsDataURL(input.files[0]);
-    }
-  });
-});
-
-// Initialize Cropper.js instance
-var cropper;
-
-// Function to open the Cropper modal
-function openModal(imageId) {
-  var image = document.getElementById(imageId);
-  var cropperImage = document.getElementById('cropperImage');
-
-  cropperImage.src = image.src;
-
-  // Ensure that any existing Cropper instance is destroyed before initializing a new one
-  if (cropper) {
-    cropper.destroy();
-  }
-
-  $('#cropModal').modal('show');
-
-  // Initialize Cropper.js for the selected image
-  cropper = new Cropper(cropperImage, {
-    aspectRatio: 0,
-    viewMode: 0,
-  });
-}
-
-function cropImage(imageIndex) {
-  // Get the cropped canvas
-  var canvas = cropper.getCroppedCanvas();
-
-  // Convert the canvas to a data URL
-  var croppedImageDataUrl = canvas.toDataURL();
-
-  // Set the cropped image as the source of the original image preview
-  var imagePreview = document.getElementById('imagePreview' + imageIndex);
-  if (imagePreview) {
-    imagePreview.src = croppedImageDataUrl;
-  }
-
-  // Set the data URL as the value of the corresponding image input field
-  var imageInput = document.getElementById('imageInput' + imageIndex);
-  if (imageInput) {
-    imageInput.value = croppedImageDataUrl;
-  }
-
-  // Close the Cropper modal
-  $('#cropModal').modal('hide');
-}
-
-  // ... your existing script ...
-
-  // Function to open the Cropper modal for a specific image
-  function openImageCropper(imageIndex) {
-    var imageInput = document.getElementById('imageInput' + imageIndex);
-    var cropperImage = document.getElementById('cropperImage');
-
-    // Check if a file is selected
-    if (imageInput.files && imageInput.files[0]) {
-      var reader = new FileReader();
-
-      reader.onload = function (e) {
-        cropperImage.src = e.target.result;
-
-        // Ensure that any existing Cropper instance is destroyed before initializing a new one
-        if (cropper) {
-          cropper.destroy();
-        }
-
-        // Show the Cropper modal
-        $('#cropModal').modal('show');
-
-        // Initialize Cropper.js for the selected image
-        cropper = new Cropper(cropperImage, {
-          aspectRatio: 1,
-          viewMode: 2,
-        });
-      };
-
-      // Read the selected file as a data URL
-      reader.readAsDataURL(imageInput.files[0]);
-    }
-  }
-
-
-function validateForm() {
-  const productName = document.getElementById("exampleInputName1").value;
-  const brand = document.getElementById("brand").value;
-  const category = document.getElementById("category").value;
-  const gender = document.getElementById("gender").value;
-  const price = parseFloat(document.getElementById("inlineFormInputName1").value);
-  const quantity = parseInt(document.getElementById("quantity").value);
-  const description = document.getElementById("exampleTextarea1").value;
-
-  
-
-  if (productName.trim() === "") {
-    document.getElementById("productNameError").textContent = "Product Name is required.";
-  }else {
-    document.getElementById("productNameError").textContent = "";
-  }
-
-  if (price === "" || price <= 0 || isNaN(price)) {
-    document.getElementById("priceError").textContent = "Price must be a valid number greater than 0.";
-    
-  } else {
-    document.getElementById("priceError").textContent = "";
-  }
-
-  if (category === "") {
-    document.getElementById("categoryError").textContent = "Category is required.";
-  } else {
-    document.getElementById("categoryError").textContent = "";
-  }
-
-  if (gender === "") {
-    document.getElementById("genderError").textContent = "Gender is required.";
-  } else {
-    document.getElementById("genderError").textContent = "";
-  }
-
-  if (brand.trim() === "") {
-    document.getElementById("brandError").textContent = "Brand is required.";
-    
-  } else {
-    document.getElementById("brandError").textContent = "";
-  }
-
-
-
-
-  if (quantity === "" || quantity < 0 || isNaN(quantity)) {
-    document.getElementById("quantityError").textContent = "Quantity must be a valid number of at least 0.";
-    
-  } else {
-    document.getElementById("quantityError").textContent = "";
-  }
-
-  if (description.trim() === "") {
-    document.getElementById("descriptionError").textContent = "Description is required.";
-   
-  } else {
-    document.getElementById("descriptionError").textContent = "";
-  }
-
-
-
-  return true;
-}
-
-</script>
