--- a/views/partials/user/header.ejs
+++ b/views/partials/user/header.ejs
@@ -42,7 +42,7 @@
             </div><!-- End .header-left -->
 
             <li class="nav-item text-nowrap">
-                <a class="nav-link"  href="/user/logout" style="color: black; position: relative; left: -20px;">Sign out</a>
+                <a class="nav-link"  href="/logout" style="color: black; position: relative; left: -20px;">Sign out</a>
             </li>
             <a href="/login" class="login-logo" >
                 <i class="fas fa-user fa-2x" style="color: black; position: relative; left: -20px;"></i>
